--- a/views/uiMask.html
+++ b/views/uiMask.html
@@ -14,7 +14,7 @@
                     <div class="form-group">
                         <label class="col-sm-3" for="masked">Masked Input:</label>
 
-                        <div class="col-sm-9" ng-init="vm = {}">
+                        <div class="col-sm-9" ng-init="vm = {}" data-ng-class="{'has-error': demo.masked.$invalid}">
                             <input
                                     ng-if="!remove"
                                     class="form-control"
