--- a/views/uiMask.html
+++ b/views/uiMask.html
@@ -26,7 +26,7 @@
                                     ng-model="vm.x"
                                     placeholder="Write a mask or click a button"
                                     ui-mask-placeholder
-                                    ui-mask-placeholder-char="{{'\ '}}"/>
+                                    ui-mask-placeholder-char="{{z}}"/>
                             <span class="help-inline">
                                     <div ng-show="vm.x.length">Model value: <code>{{vm.x}}</code></div>
                                     <div ng-hide="vm.x.length">Model value: <code>undefined</code></div>
